<resources>
    <string name="app_name">Пример авторизации</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_next">Войти</string>
    <string name="btn_cancel">Отмена</string>
    <string name="txt_forgot">Восстановление пароля</string>
    <string name="txt_register">Регистрация</string>
    <string name="btn_changepassword">Изменить</string>
    <string name="btn_logout">Выйти</string>
    <string name="fields_empty">Пустые поля</string>
    <string name="welcome">Здравствуйте</string>
</resources>
